examples/errors/06_error_handling.sop
// Soplang Error Handling
// Demonstrates how to handle errors properly in Soplang

qor("Soplang Error Handling Examples")
qor("=============================")
qor()

// Example 1: Basic try-catch
qor("Example 1: Basic try-catch")
isku_day {
    door result = 10 / 0
    qor("This won't print")
} qabo (errorMsg) {
    qor("Caught division by zero error: " + errorMsg)
}
qor()

// Example 2: Try-catch with property access
qor("Example 2: Try-catch with property access")
shey person = {name: "Hassan"}
isku_day {
    qor("Age: " + person.age)  // Accessing non-existent property
} qabo (errorMsg) {
    qor("Caught property error: " + errorMsg)
    // Add the missing property to fix the issue
    person.age = 30
    qor("Fixed: Age is now " + person.age)
}
qor()

// Example 3: Try-catch with index out of bounds
qor("Example 3: Try-catch with index out of bounds")
liis numbers = [1, 2, 3]
isku_day {
    door value = numbers[5]  // Index out of bounds
} qabo (errorMsg) {
    qor("Caught index error: " + errorMsg)
    // Add more elements to make the index valid
    numbers.kudar(4)
    numbers.kudar(5)
    numbers.kudar(6)
    qor("Fixed: Value at index 5 is now " + numbers[5])
}
qor()

// Example 4: Nested try-catch
qor("Example 4: Nested try-catch")
isku_day {
    door x = 1
    isku_day {
        door y = x / 0
    } qabo (innerError) {
        qor("Inner catch: " + innerError)
        throw "Rethrowing modified error"  // Rethrow to outer catch
    }
} qabo (outerError) {
    qor("Outer catch: " + outerError)
}
qor()

// Example 5: Function with error handling
qor("Example 5: Function with error handling")
hawl safeDivide(a, b) {
    isku_day {
        haddii (b == 0) {
            throw "Cannot divide by zero"
        }
        celi a / b
    } qabo (errorMsg) {
        qor("Error in safeDivide: " + errorMsg)
        celi null  // Return a default value in case of error
    }
}

door result1 = safeDivide(10, 2)
door result2 = safeDivide(10, 0)

qor("Result of 10/2: " + result1)
qor("Result of 10/0: " + result2)
qor()

qor("All error handling examples completed")
